--- a/resume/assets/css/style.css
+++ b/resume/assets/css/style.css
@@ -250,7 +250,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/space.jpg") top center;
+  background: url("../img/morning.jpg") top center;
   background-size: cover;
 }
 
@@ -280,7 +280,7 @@ h6 {
 }
 
 #hero p {
-  color: #fff;
+  color:#fff;
   margin-bottom: 50px;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
